--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -7,7 +7,7 @@
       <th>Id</th>
       <th>Ürün Adı</th>
       <th>Kategori</th>
-      <th>Fiyat</th>
+      <th>Ürün Fiyatı</th>
       <th>Stok Adedi</th>
     </tr>
   </thead>
