--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,13 +1,17 @@
-<div *ngIf="dataLoaded==false" class="spinner-border text-warning" role="status">
+<div
+  *ngIf="dataLoaded == false"
+  class="spinner-border text-warning"
+  role="status"
+>
   <span class="visually-hidden">Loading...</span>
 </div>
-<table *ngIf="dataLoaded==true" class="table">
+<table *ngIf="dataLoaded == true" class="table">
   <thead>
     <tr>
       <th>Id</th>
       <th>Ürün Adı</th>
       <th>Kategori</th>
-      <th>Fiyatı</th>
+      <th>Ürün Fiyatı</th>
       <th>Stok Adedi</th>
     </tr>
   </thead>
