--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,3 +1,10 @@
+<div class="mb-3">
+  <label for="filterText" class="form-label">Ürün Ara</label>
+  <input type="text"  [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="Arama İfadesi Giriniz ">
+</div>
+<div  *ngIf="filterText.length>2" class="alert alert-primary">
+{{filterText}} Aradınız 
+</div>
 <div
   *ngIf="dataLoaded == false"
   class="spinner-border text-warning"
@@ -12,14 +19,21 @@
       <th>Ürün Adı</th>
       <th>Kategori</th>
       <th>Ürün Fiyatı</th>
+      <th>Kdv'li Fiyat</th>
       <th>Stok Adedi</th>
+      <th></th>
     </tr>
   </thead>
-  <tr *ngFor="let product of products">
-    <td>{{ product.productId }}</td>
-    <td>{{ product.productName }}</td>
-    <td>{{ product.categoryId }}</td>
-    <td>{{ product.unitPrice }}</td>
-    <td>{{ product.unitsInStock }}</td>
-  </tr>
+  <tbody>
+    <tr *ngFor="let product of products | filterPipe:filterText">
+      <td>{{ product.productId }}</td>
+      <td>{{ product.productName | uppercase  }}</td>
+      <td>{{ product.categoryId }}</td>
+      <td>{{ product.unitPrice  |currency}}</td>
+      <td>{{ product.unitPrice | vatAdded:18 | currency }}</td>
+      <td>{{ product.unitsInStock }}</td>
+      <td><button (click)="addToCart(product)" class="btn btn-success">Sepete Ekle</button></td>
+    </tr>
+  </tbody>
+  
 </table>
